--- a/Misure/Misure.csproj
+++ b/Misure/Misure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Distanza\" />
+    <Folder Include="Lunghezza\" />
     <Folder Include="Pressione\" />
     <Folder Include="Temperature\" />
   </ItemGroup>
